# BeginBar

./: BeginBar.cpp  BeginBar.h  BeginBar_res.rc  CMakeLists.txt  dialogs.cpp  fakemenu.cpp  fakemenu.h  resource.h  settings.cpp  tray.cpp
lang/: en_US.rc  ja_JP.rc
